2012-10-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/xml.c (xml_string_append): New function.

	* omp/xml.h: Add header accordingly.

2012-10-11  Werner Koch  <wk@gnupg.org>

	* nasl/nasl_cert.c: New.
	* nasl/nasl_isotime.c: New.
	* nasl/nasl_init.c: Include nasl_cert.h and nasl_isotime.h.
	(libfuncs) [HAVE_LIBSSH]: Add "cert_*" functions.
	(libfuncs): Add "isotime_*" functions.
	* nasl/tests/test_isotime.nasl: New.
	* nasl/tests/Makefile (TEST_SCRIPTS): Add test_isotime.nasl
	* CMakeLists.txt: Check for libksba.
	* nasl/CMakeLists.txt (add_custom_command): Add nasl_cert.c and
	nasl_isotime.c.
	(add_definitions): Define HAVE_LIBKSBA.
	(set_target_properties): Add KSAB_CFLAGS.
	(target_link_libraries): Add ksba.

2012-10-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_init.c (libfuncs): Fixed buggy definition of
	nasl function security_message.

2012-10-09  Werner Koch  <wk@gnupg.org>

	Add a simple way to document NASL function APIs.

	* doc/Doxyfile.in (ALIASES): Add commands naslfn, nasluparam,
	naslnparam, naslret.
	(PREDEFINED): Add HAVE_LIBSSH and HAVE_LIBKSBA so that doxygen is
	able to parse the doc strings.
	* nasl/nasl_ssh.c: Document the NASL API.

	* doc/Doxyfile.in: Remove trailing white space.

2012-09-25  Andre Heinecke <aheinecke@intevation.de>

	* nasl/CMakeLists.txt: Fix library order when linking openvas-nasl

2012-09-20  Werner Koch  <wk@gnupg.org>

	* nasl/nasl_init.c (libfuncs) [HAVE_LIBSSH]: Add functions
	"ssh_set_login" and "ssh_get_issue_banner".
	* nasl/nasl_ssh.c: Include "network.h"
	(session_table_item_s): Add fields AUTHMETHODS and
	AUTHMETHODS_VALID.
	(nasl_ssh_connect): Fix use with provided socket.
	(nasl_ssh_disconnect): Factor some code out to ...
	(do_nasl_ssh_disconnect): New.
	(nasl_ssh_internal_close): New.  Also as dummy for !HAVE_LIBSSH.
	(nasl_ssh_userauth): Factor some code out to ...
	(nasl_ssh_set_login, get_authmethods): New.
	* misc/network.c: Include "nasl_ssh.h".